[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level1.gd" type="Script" id=1]
[ext_resource path="res://Pop.tscn" type="PackedScene" id=2]
[ext_resource path="res://DroidSerif-WmoY.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Back Ground.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="Pop" parent="." instance=ExtResource( 2 )]
position = Vector2( -5, 900 )

[node name="Spawn1" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Spawn2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Lives" type="RichTextLabel" parent="."]
margin_left = 71.0
margin_top = 104.0
margin_right = 230.0
margin_bottom = 165.0
custom_fonts/normal_font = SubResource( 1 )
text = "Lives:"

[node name="Label" type="Label" parent="."]
margin_left = 231.0
margin_top = 104.0
margin_right = 428.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 2 )

[node name="Level_Timer" type="Timer" parent="."]
wait_time = 50.0
one_shot = true
autostart = true

[node name="Time_Left" type="RichTextLabel" parent="."]
margin_left = 66.0
margin_top = 164.0
margin_right = 330.0
margin_bottom = 228.0
custom_fonts/normal_font = SubResource( 3 )
text = "Time Left:"

[node name="Level_Time" type="Label" parent="."]
margin_left = 331.0
margin_top = 169.0
margin_right = 471.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 4 )

[node name="Back_Ground" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="timeout" from="Spawn1" to="." method="_on_Spawn1"]
[connection signal="timeout" from="Spawn2" to="." method="_on_Spawn2_timeout"]
[connection signal="timeout" from="Level_Timer" to="." method="_time_up"]
